tests/tsc-references/types/typeRelationships/assignmentCompatibility/nullAssignedToUndefined/input.ts/es5.1.normal/output.js
var x = undefined = null; // error
var y = null; // ok, widened
